package task_1.enums;

public enum BodyTypes {
    MICRO,
    SEDAN,
    CUV,
    SUV,
    HATCHBACK,
    COUPE,
    MINIVAN,
    CABRIO,
    ROADSTER,
    SUPERCAR,
    PICKUP,
    VAN,
    LIMOUSINE,
    CAMPERVAN,
    TRUCK,
}
