package task_1.enums;

public enum Seasonalities {
    SUMMER,
    WINTER,
    MULTISEASONAL
}
